--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/cors": "^2.8.17",
     "eslint": "^9.2.0",
     "globals": "^15.1.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.7",
     "pino-pretty": "^13.0.0"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
+    "node": "^18.20.5",
     "pino-http": "^10.3.0"
   }
 }
