--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "from": "^0.1.7",
     "http-errors": "^2.0.0",
+    "import": "^0.0.6",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "node": "^18.20.5",
+    "nodemailer": "^6.9.16",
     "pino-http": "^10.3.0"
   }
 }
