--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@
 .vscode
 .DS_Store
 .idea
+
+/src/tmp/*
+!/src/tmp/.gitkeep
+
+/src/public/*
+!/src/public/.gitkeep
+
+/src/public/photos/*
+!/src/public/photos/.gitkeep
