--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node ./src/index.js",
     "dev": "nodemon src/index.js",
     "build": "npm run build-docs",
-    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "build-docs": "redocly bundle --output docs/swagger.json --ext json docs/openapi.yaml",
     "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
@@ -40,6 +40,7 @@
     "multer": "^1.4.5-lts.1",
     "node": "^18.20.5",
     "nodemailer": "^6.9.16",
-    "pino-http": "^10.3.0"
+    "pino-http": "^10.3.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
