--- a/swagger/paths/contacts/getContacts.yaml
+++ b/swagger/paths/contacts/getContacts.yaml
@@ -79,23 +79,7 @@ responses:
                 hasPreviousPage:
                   type: boolean
                   example: true
-  '404':
-    description: Contacts not found
-    content:
-      application/json:
-        schema:
-          type: object
-          required:
-            - status
-            - message
-            - data
-          properties:
-            status:
-              type: integer
-              example: 404
-            message:
-              type: string
-              example: Contacts not found
-            data:
-              type: object
-              example: {}
+  '401':
+    $ref: ../../components/response/401.yaml
+  '500':
+    $ref: ../../components/response/500.yaml
