--- a/swagger/paths/contacts/{id}/get.yaml
+++ b/swagger/paths/contacts/{id}/get.yaml
@@ -33,22 +33,8 @@ responses:
             data:
               $ref: ../../../components/schemas/contact.yaml
   '401':
-    description: Contact not found
-    content:
-      application/json:
-        schema:
-          type: object
-          required:
-            - status
-            - message
-            - data
-          properties:
-            status:
-              type: integer
-              example: 404
-            message:
-              type: string
-              example: Contact not found
-            data:
-              type: object
-              example: {}
+    $ref: ../../../components/responses/401.yaml
+  '404':
+    $ref: ../../../components/responses/404.yaml
+  '500':
+    $ref: ../../../components/responses/500.yaml
