--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@eslint/js": "^9.2.0",
     "@redocly/cli": "^1.26.1",
     "@types/cors": "^2.8.17",
+    "@types/swagger-ui-express": "^4.1.7",
     "eslint": "^9.2.0",
     "globals": "^15.1.0",
     "nodemon": "^3.1.7",
